# liftoff-agent

./: Liftoff Dashboard.html  Liftoff Home.html  OVERVIEW.md  PLAN.md  README.md
demo/: README.md  requirements.txt
dronevalkit/: .gitignore  LICENSE  README.md  pyproject.toml
dronevalkit/docker/: Dockerfile  docker-compose.yml  start_multi.sh
dronevalkit/docker/worlds/: default.sdf  windy.sdf
dronevalkit/dronevalkit/: __init__.py  agatz_correction.py  analysis.py  config.py  drone.py  exceptions.py  experiment_suite.py  factorial.py  flight.py  geo.py  logs.py  models.py  monitor.py  qgc.py  robustness.py  runner.py  test_bed.py  visualization.py
dronevalkit/dronevalkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dronevalkit/dronevalkit/io/: __init__.py  agatz_adapter.py  json_io.py  mfstsp_adapter.py  mfstsp_event_log.py  veroviz_adapter.py
dronevalkit/examples/: experiment.py  sample_solution.json  veroviz_import.py
dronevalkit/scripts/: fly.py  fly_n.py  goto_location.py  install_ubuntu_server.sh  multi.py  run.py  setup.py
dronevalkit/tests/: test_agatz.py  test_agatz_correction.py  test_analysis.py  test_config.py  test_experiment_suite.py  test_flight.py  test_geo.py  test_io.py  test_logs.py  test_mavsdk_cleanup.py  test_mfstsp.py  test_models.py  test_monitor.py  test_offsets.py  test_qgc.py  test_robustness.py  test_run_experiments.py  test_run_retry.py  test_runner.py  test_test_bed.py  test_veroviz.py  test_visualization.py
portal/: .gitignore  README.md  package-lock.json  package.json  supabase-schema.sql  (+1 more)
(+27 files in other folders)
